fixed  Report Time: Warning message for start date is hidden behind "include" box

--- a/Chalkable.Web/assets/sass2/5_dialogs/_report-dialog.sass
+++ b/Chalkable.Web/assets/sass2/5_dialogs/_report-dialog.sass
@@ -114,6 +114,10 @@
   .report-content
     padding-bottom: 100px
 
+.lunch-count-report-form
+  .formError
+    z-index: 999
+
 .comment-dialog
   h1
     overflow: hidden
